# mdpro

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/agents/: export-specialist.md  markdown-architect.md  parser-engineer.md  ui-designer.md
.github/workflows/: deploy.yml
docs/: macos-desktop.md  manual-checklist.md
e2e/: a11y.spec.ts  gameboy-theme.spec.ts  mobile.spec.ts  roundtrip.spec.ts  share-dialog-position.spec.ts  smoke.spec.ts  split-pane.spec.ts
firebase/: firestore.indexes.json  firestore.rules
src/: App.test.tsx  App.tsx  appViewport.test.ts  branding.test.ts  gameboyTheme.test.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Auth/: AccountMenu.test.tsx  AccountMenu.tsx
src/components/Editor/: Editor.test.tsx  Editor.tsx  cmTheme.test.ts  cmTheme.ts
src/desktop/: tauriConfig.test.ts
src/hooks/: useTheme.ts
src/lib/export/: html.ts  (+6 more)
src/stores/: addressBookStore.test.ts  addressBookStore.ts  authStore.test.ts  authStore.ts  documentStore.cloudSync.test.ts  documentStore.test.ts  documentStore.ts  editorStore.test.ts  editorStore.ts  folderStore.cloudSync.test.ts  folderStore.test.ts  folderStore.ts  shareStore.test.ts  shareStore.ts  uiStore.test.ts  uiStore.ts
src/types/: raw.d.ts
src/utils/: headingParser.test.ts  headingParser.ts  scrollSync.test.ts  scrollSync.ts  textStatistics.test.ts  textStatistics.ts
(+50 files in other folders)
